# railway-alarm

./: .gitignore  Cargo.toml  README.md
alarms/: Cargo.toml
alarms/alarm/: README.md  package.json
alarms/src/: config.rs  lib.rs
alarms/src/alarm/: emit.rs
alarms/src/graphql/: usage.gql
alarms/src/railway/: service.rs
backend/: Cargo.toml
backend/src/: lib.rs  main.rs  railway.rs
backend/src/graphql/: projects.gql  services.gql
frontend/: deploy.sh  index.html  package-lock.json  package.json
frontend/src/: tailwind.config.js
frontend/src/assets/: main.css
frontend/src/components/: AlarmConfig.vue
frontend/src/views/: HomeView.vue
src/: alarm.rs  config.rs  error.rs  lib.rs  main.rs  railway.rs
src/alarm/: collect.rs  emit.rs
src/graphql/: usage.gql
src/railway/: service.rs
