[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "backend"
path = "src/lib.rs"

[[bin]]
name = "backend-bin"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

color-eyre = "0.6"
thiserror = "1"

dotenv = "0.15.0"

derive_get = { git = "https://github.com/paulocsanz/derive_get.git" }
